--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ target/**
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+create_image_quarkus_on_server.sh
+increment-version.sh
