--- a/pom.xml
+++ b/pom.xml
@@ -4,18 +4,18 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>br.com.communication</groupId>
   <artifactId>communication</artifactId>
-  <version>0.0.8</version>
+  <version>0.0.10</version>
   <properties>
-    <compiler-plugin.version>3.11.0</compiler-plugin.version>
-    <kotlin.version>1.8.22</kotlin.version>
-    <maven.compiler.release>17</maven.compiler.release>
+    <compiler-plugin.version>3.12.1</compiler-plugin.version>
+    <kotlin.version>1.9.22</kotlin.version>
+    <maven.compiler.release>21</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-    <quarkus.platform.version>3.2.0.Final</quarkus.platform.version>
+    <quarkus.platform.version>3.7.1</quarkus.platform.version>
     <skipITs>true</skipITs>
-    <surefire-plugin.version>3.0.0</surefire-plugin.version>
+    <surefire-plugin.version>3.2.5</surefire-plugin.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -99,7 +99,7 @@
     <dependency>
       <groupId>org.apache.camel.quarkus</groupId>
       <artifactId>camel-quarkus-support-xalan</artifactId>
-      <version>3.0.0-RC1</version>
+      <version>3.7.0</version>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
@@ -213,7 +213,7 @@
         </dependencies>
         <configuration>
           <javaParameters>true</javaParameters>
-          <jvmTarget>17</jvmTarget>
+          <jvmTarget>21</jvmTarget>
           <args>
             <arg>-Xjsr305=strict</arg>
           </args>
